--- a/ndex.html
+++ b/ndex.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <img src="img/Versiculo.jpg"
+   <img src="https://i.pinimg.com/736x/7d/d6/5c/7dd65c8b9b12c5900ad40b05633e006d.jpg"
 />    
 </body>
 </html>
